# OMaxMaxence.github.io

./: gitignore
.github/workflows/: cmake-single-platform.yml  static.yml
test/: CMakeLists.txt
test/include/: CMakeLists.txt  exo.h  test.h
test/src/: CMakeLists.txt  exo.cpp  test.cpp
